--- a/migration.yaml
+++ b/migration.yaml
@@ -13,7 +13,7 @@ office:
 
 user:
   - officeid: d8af2d0372b84f6fb33a97847b94cacd
-    username: s4rdh0n0
+    username: '3503112605860003'
     email: s4rdh0n0@gmail.com
 
 master:
